@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.120 2010-03-10 16:42:12 en Exp $
+# $Id: CHANGES,v 1.993.2.121 2010-03-18 09:30:28 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.8 (2010/??/??)
+ - (2010/03/18) Updated Ukrainian language translation, thanks to Belskii Artem!
  - (2010/03/10) Fixed bug#4416 - Merge: whitespace before ticketnumber not removed.
  - (2010/03/09) Fixed bug#5085 - Wrong colours codes in Stats::Graph::dclrs
  - (2010/03/08) Fixed bug#5102 - Notification sent to OTRS instead of Customer
